# AI_LUNG

./: .gitignore  DOCUMENTATION.md  QUICKREF.md  README.md  RESEARCH_METHODOLOGY.md  TRAINING_GUIDE.md  pyproject.toml  requirements.txt
configs/: baseline.yaml  baseline_colab.yaml  nodule_detection.yaml  nodule_detection_colab.yaml  recon3d.yaml  recon3d_colab.yaml
notebooks/: 01_data_sanity.ipynb  train_colab.ipynb
scripts/: build_splits.py  export_denoised.py  preprocess_to_npy.py  sanity_check.py  train_denoiser_baseline.py  train_nodule_detector.py  train_recon3d.py
src/ailung/: __init__.py  annotations.py  dataset.py  models.py  preprocess.py  splits.py  torch_dataset.py
