[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-lung"
version = "0.1.0"
description = "AI-LUNG preprocessing and dataset utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pydicom>=2.4",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "scipy>=1.11",
  "scikit-image>=0.22",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
